fix z-index property

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -276,6 +276,10 @@ p {
 
 /* My Profile */
 
+.ProfileContainer {
+  z-index: 1000;
+}
+
 .ProfileShadow {
   height: 6rem;
   width: 6rem;
@@ -283,7 +287,7 @@ p {
   animation: pulse-out 1200ms infinite;
   position: fixed;
   right: 0.5rem;
-  top: 84vh;
+  top: 77vh;
   border-radius: 50%;
   border: 3px solid #1ECD97;
   box-shadow: 0 0 5px #1ECD97;
@@ -292,7 +296,7 @@ p {
 .myPhotoLink {
   position: fixed;
   right: 1rem;
-  top: 85vh;
+  top: 78vh;
 }
 
 .myPhoto {
